Fixes - Notifcation updating - yarn.lock - wallet button mobile

--- a/src/client/components/Sidebar/WalletSidebar.less
+++ b/src/client/components/Sidebar/WalletSidebar.less
@@ -31,7 +31,7 @@
 			
 			padding-left: 5px;
 			padding-right: 5px;
-			//display: block;
+			display: block;
 		}
 	}
 }
